# llama.cpp_multnpu

./: .gitignore  CMakeLists.txt  README.md
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  result-checkpoint.csv  run-checkpoint.sh  run_doc-checkpoint.sh
common/: arg.cpp  common.cpp  common.h
data/: hotpot_qa_20.json
examples/: CMakeLists.txt
ggml/include/: ggml-backend.h
ggml/src/: ggml-backend.cpp
include/: llama.h
main/: CMakeLists.txt  README.md  ignite-npu.cpp
pkg-adb/llama.cpp/lib/cmake/ggml/: ggml-config.cmake
pocs/: CMakeLists.txt
scripts-arm/: build_android.sh  run-remote.sh  run-setup.sh
scripts-termux/: build_termux.sh  hw_setup_log.sh  ignite-qwen.sh  qwen3_run.sh  run-setup.sh  run.sh  run_all.sh  run_nologs.sh  run_npu_infer.sh
src/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-ignite.cpp  llama-ignite.h
src/hard/: affinity.cpp  affinity.h  device.cpp  device.h  dvfs.cpp  dvfs.h  record.cpp  record.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tools/: CMakeLists.txt
